fix(overflow-items): does not stretch to maximum width (#DS-3809)

--- a/packages/components-dev/overflow-items/styles.scss
+++ b/packages/components-dev/overflow-items/styles.scss
@@ -1,4 +1,4 @@
 dev-app {
-    width: 608px;
+    max-width: 608px;
     display: block;
 }
